tests/snapshots/keys_interactive__insta_keys_interactive_btab.snap
---
source: tests/keys_interactive.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  4/4                                                                        0/0"
"c>                                                                              "
